# librawstor

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  AUTHORS  ChangeLog  ChangeLog.md  Makefile  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac  run.sh
.github/gpg-keys/: vasily_stepanov.asc
.github/tools/: clang-format.sh  commit-and-push.sh  fio.sh  git-commit-and-push.sh  git-config.sh  git-version.sh
.github/workflows/: dist.yml  functest.yml  linter.yml  main.yml  package.yml  perftest.yml  release.yml  unittest.yml
cli/: .gitignore  Makefile  Makefile.am  README.md  create.c  create.h  delete.c  delete.h  gcc.h  main.c  remove.c  remove.h  show.c  show.h  testio.c  testio.h  units.c  units.h  uri.cpp  uri.h
deb/: .gitignore  control.in  librawstor.in  python3-rawstor.in
deb/librawstor/: control.in
deb/python3-rawstor/: .gitignore  changelog  changelog.in  control.in
docs/: locations_and_targets.md
include/: log.h  rawstor.h  rawstor_proto.h
include/rawstor/: config.h.in  event.h  io.h  io_callback.h  io_event.h  io_queue.h  object.h  ost_protocol.h  rawio.h  rawstor.h  uuid.h  version.h.in
librawio/include/rawio/: queue.hpp
librawio/src/: Makefile.am  poll_event.cpp  poll_event.cpp.orig  poll_event.hpp  poll_queue.cpp  poll_queue.hpp  poll_session.cpp  poll_session.hpp  queue.cpp  rawio.cpp  uring_buffer.cpp  uring_buffer.hpp  uring_queue.cpp  uring_queue.hpp
librawio/tests/: Makefile.am  fixture.cpp  fixture.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  test_basics.cpp  test_cancel.cpp  test_multiplex.cpp  test_multishot.cpp  test_overflow.cpp  test_pollhup.cpp
librawrx/include/rawrx/: observable.hpp
librawrx/src/: Makefile.am  observable.cpp
librawrx/tests/: .gitignore  Makefile.am  test_observable.cpp  test_pipe.cpp  test_usecase.cpp
librawstd/include/rawstd/: .gitignore  endian.h  gcc.h  gpp.hpp  hash.h  iovec.h  list.h  logging.h  logging.hpp  logging_config.h.in  mempool.h  mempool.hpp  ringbuf.hpp  socket.h  threading.h  uri.hpp  uuid.h
librawstd/src/: Makefile.am  hash.c  iovec.c  list.c  logging.cpp  mempool.c  socket.c  threading.c  uri.cpp  uuid.c  uuid_internals.h
librawstd/tests/: Makefile.am  test_hash.cpp  test_iovec.cpp  test_list.cpp  test_mempool.cpp  test_ringbuf.cpp  test_threading.cpp  test_uri.cpp  test_uuid.cpp
librawstorio/include/rawstorio/: base_event.hpp  base_queue.hpp  callback.hpp  event.h  event.hpp  io.h  io_event.h  poll_event.hpp  poll_queue.hpp  queue.h  queue.hpp  task.hpp
librawstorio/src/: Makefile.am  base_event.cpp  event.cpp  event.hpp  event_liburing.c  event_liburing.h  event_poll.c  event_poll.h  event_thread.c  event_thread.h  io_aio.c  io_event_liburing.h  io_event_poll.c  io_event_poll.h  io_event_thread.c  io_event_thread.h  io_liburing.c  io_poll.c  io_poll.h  io_session_poll.c  io_session_poll.h  io_session_seekable_thread.c  io_session_seekable_thread.h  io_session_thread.c  io_session_thread.h  io_session_unseekable_thread.c  io_session_unseekable_thread.h  io_thread.c  io_thread.h  poll_event.cpp  poll_event.hpp  poll_queue.cpp  poll_queue.hpp  poll_session.cpp  poll_session.hpp  queue.cpp  queue_aio.c  queue_liburing.c  queue_poll.c  queue_poll.cpp  (+20 more)
librawstorio/tests/: .gitignore  Makefile.am  fixture.cpp  fixture.hpp  main.cpp  server.cpp  server.hpp  socket.cpp  socket.hpp  task.hpp  test_basics.cpp  test_cancel.cpp  test_multiplex.cpp  test_multishot.cpp  test_overflow.cpp  test_partial.cpp  test_pollhup.cpp
librawstorstd/: Makefile.am
librawstorstd/include/rawstorstd/: endian.h  gcc.h  gpp.hpp  hash.h  iovec.h  list.h  (+14 more)
librawstorstd/src/: Makefile.am  hash.c  iovec.c  iovec_routines.c  list.c  logging.c  logging.cpp  mempool.c  ringbuf.c  socket.c  socket_address.cpp  socket_routines.c  threading.c  uri.cpp  uuid.c  uuid_internals.h
librawstorstd/tests/: .gitignore  Makefile.am  test_hash.c  test_hash.cpp  test_iovec.c  test_iovec.cpp  test_iovec_routines.c  test_list.c  test_list.cpp  test_mempool  test_mempool.c  test_mempool.cpp  test_ringbuf.c  test_ringbuf.cpp  test_threading.c  test_threading.cpp  test_uri  test_uri.cpp  test_uuid.c  test_uuid.cpp
ost/: .gitignore  Makefile.am  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
pyrawstor/: .gitignore  Makefile.am  config.py.in  setup.py
pyrawstor/rawstor/: module.c  rawstor_bindings.c  rawstor_bindings.h
pyrawstor/tests/: test_basics.py
rawstorstd/: Makefile.am
rpm/: .gitignore  librawstor.spec.in  python3-rawstor.spec.in
src/: .gitignore  Makefile  Makefile.am  README.md  aio.h  aio_librt.c  aio_liburing.c  aio_poll.c  backend.h  backend_mem.c  blkdev_session.cpp  blkdev_session.hpp  connection.cpp  connection.hpp  connection_ost.c  connection_ost.cpp  connection_ost.h  connection_ost.hpp  driver.cpp  driver.hpp  driver_file.cpp  driver_file.hpp  driver_ost.cpp  driver_ost.hpp  file_driver.cpp  file_driver.hpp  file_session.cpp  file_session.hpp  gcc.h  hash.c  hash.h  io.h  io_aio.c  io_liburing.c  io_poll.c  io_rt.c  io_thread.c  iovec_routines.c  iovec_routines.h  list.c  (+60 more)
tests/: .gitignore  Makefile  Makefile.am  backend.cpp  backend.hpp  fixture.hpp  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp  test_dummy.c  test_io.cpp  test_iovec_routines.c  test_lifecycle.cpp  test_list.c  test_mempool.c  test_pool.c  test_ringbuf.c  test_threading.c  test_uuid.c  unittest.h  unittest.hpp  utils.h
vhost/: .gitignore  Makefile.am  README.md  client.cpp  client.hpp  device.cpp  device.hpp  devregion.cpp  devregion.hpp  main.cpp  protocol.h  queue.cpp  queue.hpp  ring.cpp  ring.hpp  run.sh  server.c  server.cpp  server.h  server.hpp  virtq.cpp  virtq.hpp  virtqueue.cpp  virtqueue.hpp
vhost-server/: .gitignore  Makefile  main.c  server.c  server.h
vhost-user/: .gitignore  Makefile  main.c  server.c  server.h
vhost/stdheaders/linux/: types.h  vhost.h  vhost_types.h  virtio_blk.h  virtio_config.h  virtio_ring.h  virtio_types.h
vu/: .gitignore  Makefile  Makefile.am  README.md  aio.h  gcc.h  main.c  main.cpp  protocol.h  run.sh  server.c  server.h
